Closed Bug 16694 Opened 25 years ago Closed 25 years ago

the install wizard crashes in the options dialog

Categories

(SeaMonkey :: Installer, defect, P3)

x86
Windows NT

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: ssu0262, Assigned: ssu0262)

Details

This happens if a component has the INVISIBLE attribute.

steps to reproduce:
1) run nsinstall.exe
2) copy TEMP files into a different dir
3) from this different dir, modify config.ini in the
   [Component3] section (aim) the Attributes= key from
   SELECTED to SELECTED|INVISIBLE.
4) save file and run setup.exe
5) navigate to the Custom option and randomly click on the
   checkboxes in the list box.
6) Crash should happen here.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Status: RESOLVED → REOPENED
Sean,
while trying to verify this morning, I crashed when using the scroll bar to view
all the options.  I could select/deselect any of the options but once my mouse
hit the scroll bar to view other options outside window, I could crash at will.
Resolution: FIXED → ---
Status: REOPENED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Sean, this is working on build 1999101908 on a Win98 machine. I will change
resolution and then verify
Updating component from Install Wizard to Installer
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.