fixing bug #16694. fixes crash bug in the select components dialog in the windows installer. r=sgehani.  Affects only windows platform.